plugins {
    id 'java'
    id 'java-library'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'org.siouan.frontend-jdk11' version '6.0.0'
}

allprojects {
    group = 'com.form76.generator'
    version = '1.0.0'

    java {
        sourceCompatibility = '17'
    }

    repositories {
        mavenCentral()
    }
}

frontend {
    bootJar {
        enabled false
    }
}

